--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -2175,7 +2175,7 @@ spec:
                               application's API token, see https://pushover.net/apps.
                               The secret needs to be in the same namespace as the
                               AlertmanagerConfig object and accessible by the Prometheus
-                              Operator.
+                              Operator. Either `token` or `tokenFile` is required.
                             properties:
                               key:
                                 description: The key of the secret to select from.  Must
@@ -2196,9 +2196,8 @@ spec:
                           tokenFile:
                             description: The token file that contains the registered
                               application's API token, see https://pushover.net/apps.
-                              The token file needs to be in the same namespace as
-                              the AlertmanagerConfig object and accessible by the
-                              Prometheus Operator.
+                              Either `token` or `tokenFile` is required. It requires
+                              Alertmanager >= v0.26.0.
                             type: string
                           url:
                             description: A supplementary URL shown alongside the message.
@@ -2211,7 +2210,8 @@ spec:
                             description: The secret's key that contains the recipient
                               user's user key. The secret needs to be in the same
                               namespace as the AlertmanagerConfig object and accessible
-                              by the Prometheus Operator.
+                              by the Prometheus Operator. Either `userKey` or `userKeyFile`
+                              is required.
                             properties:
                               key:
                                 description: The key of the secret to select from.  Must
@@ -2231,9 +2231,8 @@ spec:
                             type: object
                           userKeyFile:
                             description: The user key file that contains the recipient
-                              user's user key. The user key file needs to be in the
-                              same namespace as the AlertmanagerConfig object and
-                              accessible by the Prometheus Operator.
+                              user's user key. Either `userKey` or `userKeyFile` is
+                              required. It requires Alertmanager >= v0.26.0.
                             type: string
                         type: object
                       type: array
