--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -2279,7 +2279,7 @@
                                 "type": "string"
                               },
                               "token": {
-                                "description": "The secret's key that contains the registered application's API token, see https://pushover.net/apps. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
+                                "description": "The secret's key that contains the registered application's API token, see https://pushover.net/apps. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator. Either `token` or `tokenFile` is required.",
                                 "properties": {
                                   "key": {
                                     "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -2300,7 +2300,7 @@
                                 "type": "object"
                               },
                               "tokenFile": {
-                                "description": "The token file that contains the registered application's API token, see https://pushover.net/apps. The token file needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
+                                "description": "The token file that contains the registered application's API token, see https://pushover.net/apps. Either `token` or `tokenFile` is required. It requires Alertmanager >= v0.26.0.",
                                 "type": "string"
                               },
                               "url": {
@@ -2312,7 +2312,7 @@
                                 "type": "string"
                               },
                               "userKey": {
-                                "description": "The secret's key that contains the recipient user's user key. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
+                                "description": "The secret's key that contains the recipient user's user key. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator. Either `userKey` or `userKeyFile` is required.",
                                 "properties": {
                                   "key": {
                                     "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -2333,7 +2333,7 @@
                                 "type": "object"
                               },
                               "userKeyFile": {
-                                "description": "The user key file that contains the recipient user's user key. The user key file needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
+                                "description": "The user key file that contains the recipient user's user key. Either `userKey` or `userKeyFile` is required. It requires Alertmanager >= v0.26.0.",
                                 "type": "string"
                               }
                             },
