--- a/bundle.yaml
+++ b/bundle.yaml
@@ -18450,7 +18450,7 @@ spec:
                     authorization:
                       description: "Authorization section for the URL. \n It requires
                         Prometheus >= v2.26.0. \n Cannot be set at the same time as
-                        `sigv4`, `basicAuth`, or `oauth2`."
+                        `sigv4`, `basicAuth`, `oauth2`, or `azureAd`."
                       properties:
                         credentials:
                           description: Selects a key of a Secret in the namespace
@@ -18482,9 +18482,36 @@ spec:
                             \n Default: \"Bearer\""
                           type: string
                       type: object
+                    azureAd:
+                      description: "AzureAD for the URL. \n It requires Prometheus
+                        >= v2.45.0. \n Cannot be set at the same time as `authorization`,
+                        `basicAuth`, `oauth2`, or `sigv4`."
+                      properties:
+                        cloud:
+                          description: The Azure Cloud. Options are 'AzurePublic',
+                            'AzureChina', or 'AzureGovernment'.
+                          enum:
+                          - AzureChina
+                          - AzureGovernment
+                          - AzurePublic
+                          type: string
+                        managedIdentity:
+                          description: ManagedIdentity defines the Azure User-assigned
+                            Managed identity.
+                          properties:
+                            clientId:
+                              description: The client id
+                              type: string
+                          required:
+                          - clientId
+                          type: object
+                      required:
+                      - managedIdentity
+                      type: object
                     basicAuth:
                       description: "BasicAuth configuration for the URL. \n Cannot
-                        be set at the same time as `sigv4`, `authorization`, or `oauth2`."
+                        be set at the same time as `sigv4`, `authorization`, `oauth2`,
+                        or `azureAd`."
                       properties:
                         password:
                           description: The secret in the service monitor namespace
@@ -18568,7 +18595,7 @@ spec:
                     oauth2:
                       description: "OAuth2 configuration for the URL. \n It requires
                         Prometheus >= v2.27.0. \n Cannot be set at the same time as
-                        `sigv4`, `authorization`, or `basicAuth`."
+                        `sigv4`, `authorization`, `basicAuth`, or `azureAd`."
                       properties:
                         clientId:
                           description: The secret or configmap containing the OAuth2
@@ -18715,8 +18742,8 @@ spec:
                     sigv4:
                       description: "Sigv4 allows to configures AWS's Signature Verification
                         4 for the URL. \n It requires Prometheus >= v2.26.0. \n Cannot
-                        be set at the same time as `authorization`, `basicAuth`, or
-                        `oauth2`."
+                        be set at the same time as `authorization`, `basicAuth`, `oauth2`,
+                        or `azureAd`."
                       properties:
                         accessKey:
                           description: AccessKey is the AWS API key. If not specified,
@@ -27642,7 +27669,7 @@ spec:
                     authorization:
                       description: "Authorization section for the URL. \n It requires
                         Prometheus >= v2.26.0. \n Cannot be set at the same time as
-                        `sigv4`, `basicAuth`, or `oauth2`."
+                        `sigv4`, `basicAuth`, `oauth2`, or `azureAd`."
                       properties:
                         credentials:
                           description: Selects a key of a Secret in the namespace
@@ -27674,9 +27701,36 @@ spec:
                             \n Default: \"Bearer\""
                           type: string
                       type: object
+                    azureAd:
+                      description: "AzureAD for the URL. \n It requires Prometheus
+                        >= v2.45.0. \n Cannot be set at the same time as `authorization`,
+                        `basicAuth`, `oauth2`, or `sigv4`."
+                      properties:
+                        cloud:
+                          description: The Azure Cloud. Options are 'AzurePublic',
+                            'AzureChina', or 'AzureGovernment'.
+                          enum:
+                          - AzureChina
+                          - AzureGovernment
+                          - AzurePublic
+                          type: string
+                        managedIdentity:
+                          description: ManagedIdentity defines the Azure User-assigned
+                            Managed identity.
+                          properties:
+                            clientId:
+                              description: The client id
+                              type: string
+                          required:
+                          - clientId
+                          type: object
+                      required:
+                      - managedIdentity
+                      type: object
                     basicAuth:
                       description: "BasicAuth configuration for the URL. \n Cannot
-                        be set at the same time as `sigv4`, `authorization`, or `oauth2`."
+                        be set at the same time as `sigv4`, `authorization`, `oauth2`,
+                        or `azureAd`."
                       properties:
                         password:
                           description: The secret in the service monitor namespace
@@ -27760,7 +27814,7 @@ spec:
                     oauth2:
                       description: "OAuth2 configuration for the URL. \n It requires
                         Prometheus >= v2.27.0. \n Cannot be set at the same time as
-                        `sigv4`, `authorization`, or `basicAuth`."
+                        `sigv4`, `authorization`, `basicAuth`, or `azureAd`."
                       properties:
                         clientId:
                           description: The secret or configmap containing the OAuth2
@@ -27907,8 +27961,8 @@ spec:
                     sigv4:
                       description: "Sigv4 allows to configures AWS's Signature Verification
                         4 for the URL. \n It requires Prometheus >= v2.26.0. \n Cannot
-                        be set at the same time as `authorization`, `basicAuth`, or
-                        `oauth2`."
+                        be set at the same time as `authorization`, `basicAuth`, `oauth2`,
+                        or `azureAd`."
                       properties:
                         accessKey:
                           description: AccessKey is the AWS API key. If not specified,
