--- a/bundle.yaml
+++ b/bundle.yaml
@@ -32807,6 +32807,8 @@ spec:
                       enum:
                       - HTTP
                       - HTTPS
+                      - http
+                      - https
                       type: string
                     server:
                       description: A valid string consisting of a hostname or IP followed
@@ -33339,9 +33341,10 @@ spec:
                   properties:
                     role:
                       description: Role of the Kubernetes entities that should be
-                        discovered. Currently the only supported role is "Node".
+                        discovered. Currently the only supported role is "node".
                       enum:
                       - Node
+                      - node
                       type: string
                   required:
                   - role
@@ -33535,6 +33538,8 @@ spec:
                 enum:
                 - HTTP
                 - HTTPS
+                - http
+                - https
                 type: string
               scrapeInterval:
                 description: ScrapeInterval is the interval between consecutive scrapes.
