--- a/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
@@ -359,6 +359,8 @@ spec:
                       enum:
                       - HTTP
                       - HTTPS
+                      - http
+                      - https
                       type: string
                     server:
                       description: A valid string consisting of a hostname or IP followed
@@ -891,9 +893,10 @@ spec:
                   properties:
                     role:
                       description: Role of the Kubernetes entities that should be
-                        discovered. Currently the only supported role is "Node".
+                        discovered. Currently the only supported role is "node".
                       enum:
                       - Node
+                      - node
                       type: string
                   required:
                   - role
@@ -1087,6 +1090,8 @@ spec:
                 enum:
                 - HTTP
                 - HTTPS
+                - http
+                - https
                 type: string
               scrapeInterval:
                 description: ScrapeInterval is the interval between consecutive scrapes.
