--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -5085,6 +5085,23 @@ spec:
                 description: "Interval between consecutive scrapes. \n Default: \"30s\""
                 pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                 type: string
+              scrapeProtocols:
+                description: "The protocols to negotiate during a scrape. It tells
+                  clients what protocol are accepted by Prometheus and with what weight
+                  (most wanted is first). Supported values (case sensitive): PrometheusProto,
+                  OpenMetricsText0.0.1, OpenMetricsText1.0.0, PrometheusText0.0.4.
+                  \n If unset, Prometheus uses its default value: [\"OpenMetricsText1.0.0\",\"OpenMetricsText0.0.1\",\"PrometheusText0.0.4\"]
+                  \n It requires Prometheus >= v2.48.0."
+                items:
+                  description: ScrapeProtocol represents supported protocol for scraping
+                    metrics.
+                  enum:
+                  - PrometheusProto
+                  - OpenMetricsText0.0.1
+                  - OpenMetricsText1.0.0
+                  - PrometheusText0.0.4
+                  type: string
+                type: array
               scrapeTimeout:
                 description: Number of seconds to wait until a scrape request times
                   out.
